src/components/instructions/index.scss
.instructionArea {
  padding: 0 3rem;
  overflow: scroll;
  animation: fade-in 0.5s linear;
}

h1 {
  padding-top: 2rem;
  padding-bottom: 1rem;
  font-size: 2.5rem;
  margin: 1rem 0 0.37rem 0;
}

.stepTitle {
  font-size: 2.5rem;
  margin: 0.5rem 0;
}

p.step,
h3.step {
  font-family: 'Libre Baskerville', serif;
}

p li {
  margin: 1rem 0;
}

p ol,
p ul {
  padding-left: 0;
}

.imageWrapper {
  height: 33vh;
  display: flex;
}

.image {
  width: 100%;
  animation: fade-in 0.5s linear;
}

.wrapper {
  height: 92vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  width: 100%;
  background-color: #F0F0F0;
  transition: 0.5s;
  transform: translateX(0);
  position: relative;
  z-index: 1;
}

.nav {
  height: 8vh;
  background-color: #571800;
  color: #F0F0F0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

span {
  padding: 0 1rem;
}

p span {
  padding: 0
}

.button {
  height: 8vh;
  width: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #000;
  text-transform: uppercase;
  letter-spacing: 0.075rem;
  flex: 1;
}

.next {
  background-color: #FF5000;
}

.breadCrumb {
  display: flex;
  width: 100%;
  padding: 0 4rem;
  flex: 4;
}

.active,
.inactive {
  padding-bottom: 0.45rem;
  margin: 0 0.5rem;
  flex: 1;
  text-align: center;
}

.active {
  border-bottom: 0.25rem solid #FF5000;
}

.inactive {
  border-bottom: 0.25rem solid #752100;
}

.gramSlider {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #F0F0F0;
  animation: fade-in 0.5s linear;
  position: relative;
  z-index: 0;
}

.gramSlider h1 {
  font-weight: lighter;
  font-size: 7rem;
  line-height: 6rem;
  margin-bottom: 0;
  margin-top: -5rem;
  padding: 0;
  font-family: 'Lato', sans-serif;
}

.gramSlider h3 {
  font-weight: lighter;
  letter-spacing: 0.075rem;
  margin-bottom: 4rem;
}

.circle {
  width: 30vw;
  max-width: 20rem;
  display: flex;
  margin: auto;
  position: relative;
  z-index: 0;
}

.clock {
  color: white;
  font-weight: lighter;
  font-size: 7vw;
  text-align: center;
  font-family: 'Lato', sans-serif;

  @media (min-width: 1100px) {
    font-size: 5rem;
  }
}

.clockComponent {
  display: flex;
  flex-direction: column;
  animation: fade-in 0.5s linear;
  width: 100%;
}

.circularTime {
  display: flex;
  align-items: center;
  justify-content: center;

  h1 {
    position: absolute;
    z-index: 1;
    margin-top: 0;
    padding-top: 1rem;
  }
}

.startButton {
  background-color: #752100;
  text-transform: uppercase;
  letter-spacing: 0.075rem;
  color: white;
  padding: 1.25em 2.25em;
  width: 8em;
  margin: 3rem auto;
  text-align: center;
  animation: pulse 2s infinite;
  border-radius: 6px;
}
@-webkit-keyframes pulse {
    0% { -webkit-transform: scale(1); }
    50% { -webkit-transform: scale(1.1); }
    100% { -webkit-transform: scale(1); }
}
@keyframes pulse {
    0% { transform: scale(1); }
    50% { transform: scale(1.1); }
    100% { transform: scale(1); }
}
@-webkit-keyframes fade-in {
	0%   { opacity: 0; }
	100% { opacity: 1; }
}

